@@ -155,7 +155,7 @@ class FilePath extends AbstractScalarAnalysis
         $realPath = realpath($string);
         if ($string !== $realPath && is_string($realPath)) {
             // We only add the realpath, if it differs from the string
-            $result[static::REAL_PATH] = $this->pool->fileService->filterFilePath($realPath);
+            $result[static::REAL_PATH] = $realPath;
         }
         $result[static::MIME_TYPE] = $this->bufferInfo->file($string);
 
