@@ -9,7 +9,8 @@
 - Change: Removed some literals.
 - Change: Some deprecations.
 - Change: Only use byRef when absolutely necessary.
-- Added class meta analysis for classnemaes in strings.
+- Change: We do not filter the file path anymore.
+- Added class meta analysis for class names in strings.
 
 5.0.5
 - Added formatting for float values for better readability.
